<resources>
    <string name="app_name">ProyectoFinal</string>
    <!-- Menu -->
    <string name="inicio">Catálogo</string>
    <string name="pedidos">Pedidos</string>
    <string name="usuario">Usuario</string>
    <string name="menu">Menú</string>
    <string name="bienvenidaInicio">Hola %s, estos son los productos que tenemos para ofrecerte: </string>
    <string name="bienvenidaInicioAdmin">Hola %s (administrador), estos son los productos que los clientes pueden ver: </string>
    <string name="bienvenidaInicioInvitado">Hola, estos son los productos que tenemos para ofrecerte: </string>

    <!-- Inicio de sesión/Registro -->
    <string name="iniciar">Iniciar sesión</string>
    <string name="registrar">Registrarse</string>
    <string name="cancelar">Cancelar</string>
    <string name="requiereInicioSesion">Se requiere iniciar sesión para acceder a esta sección</string>
    <string name="botonPositivo">Aceptar</string>
    <string name="botonNegativo">Cancelar</string>
    <string name="olvidoContrasenia">Olvidé mi contraseña</string>
    <string name="catalogo">Ver catálogo</string>
    <string name="datos">%1s : %2s</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="other">Otro</string>
    <string name="error">Favor de llenar el campo</string>
    <string name="errorRadioButton">Favor de seleccionar una de las opciones</string>
    <string name="errorMessage">Favor de llenar los campos indicados</string>
    <string name="noSex">Favor de seleccionar el sexo</string>
    <string name="bienvenidaLogin">¡Bienvenido!</string>
    <string name="datosInicio">Por favor, ingresa tus datos</string>
    <string name="regresar">Regresar</string>
    <string name="correoElectronico">Correo Electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="configuración">Configuración</string>
    <string name="domiciliosEntrega">Domicilios de entrega</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="hastaLuego">¡Hasta Luego!</string>
    <string name="correoEnviado">El correo de verificación ha sido enviado</string>
    <string name="correoNoEnviado">No se pudo enviar el correo de verificación</string>
    <string name="usuarioCreado">Usuario creado</string>
    <string name="restablecerContraseña">Restablecer contraseña</string>
    <string name="correoEnlaceRestablecerContraseña">Ingrese su correo para recibir el enlace para restablecer la contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="enlaceRestablecerContraseñaExitoso">El enlace para restablecer la contraseña ha sido enviado a su correo</string>
    <string name="enlaceRestablecerContraseñaFallido">El enlace no se ha podido enviar: %s</string>
    <string name="favorIngresarCorreo">Favor de ingresar la dirección de correo</string>
    <string name="seRequiereCorreo">Se requiere el correo</string>
    <string name="seRequiereContraseña">Se requiere una contraseña o la contraseña no tiene por lo menos 6 caracteres</string>
    <string name="errorCorreoFormato">Error: El correo electrónico no tiene un formato correcto</string>
    <string name="errorContraseñaInvalida">Error: La contraseña no es válida</string>
    <string name="errorContraseñaIngreso">Error: Una cuenta ya existe con el mismo correo, pero con diferentes datos de ingreso</string>
    <string name="errorCuentaYaExiste">Error: el correo electrónico ya está en uso con otra cuenta</string>
    <string name="errorSesionExpirada">Error: La sesión ha expirado. Favor de ingresar nuevamente</string>
    <string name="errorUsuarioInexistente">Error: No existe el usuario con la información proporcionada</string>
    <string name="errorContraseñaDebil">Error: La contraseña debe de tener por lo menos 6 caracteres</string>
    <string name="errorNoConexion">Error: Red no disponible o se interrumpió la conexión</string>
    <string name="errorGeneral">Error. No se pudo autenticar exitosamente</string>
    <string name="autenticacionExitosa">Autenticación exitosa</string>

    <!--Pedidos-->
    <string name="finalizar">Finalizar y Guardar</string>
    <string name="nuevoPedido">Nuevo pedido</string>
    <string name="actualizarPedido">Actualizar pedido</string>
    <string name="detallePedido">Detalle del pedido</string>
    <string name="detalleEntrega">Detalle de entrega</string>
    <string name="listaPedidos">Mis pedidos</string>
    <string name="sucursal">Sucursal</string>
    <string name="domicilio">A domicilio</string>
    <string name="pago">Método de pago</string>
    <string name="productoSeleccionado">Producto seleccionado</string>
    <string name="totalPago">Total a pagar: %s </string>
    <string name="entrega">Por favor, seleccione el modo de entrega:</string>
    <string name="entregaEn">Entrega en: </string>
    <string name="producto">Producto</string>
    <string name="listaProductos">Productos disponibles</string>
    <string name="pedidoTexto">Pedido </string>
    <string name="domicilioEntrega">Por favor, ingrese los datos del domicilio de entrega</string>
    <string name="domicilioEntregaEditar">Puedes editar los datos que proporcionaste anteriormente</string>
    <string name="calleNumero">Calle y número</string>
    <string name="colonia">Colonia</string>
    <string name="codigoP">Código postal</string>
    <string name="observacionesDireccion">Observaciones adicionales</string>
    <string name="notasAdicionales"> Notas adicionales: </string>
    <string name="entregaSucursal">Entrega en sucursal</string>
    <string name="estatus">Estatus</string>
    <string name="pagoRestante">Pago restante</string>
    <string name="calle">Calle</string>
    <string name="pedido">Mis pedidos</string>
    <string name="estatus0">Recibido</string>
    <string name="estatus1">En proceso</string>
    <string name="estatus2">Finalizado</string>
    <string name="estatus3">Enviado</string>
    <string name="estatus4">Entregado</string>
    <string name="estatus5">Cancelado</string>
    <string name="coma">, </string>
    <string name="noRegistros">Sin registros por mostrar</string>
    <string name="codigoPostal">Codigo postal: </string>
    <string name="recargar">Recargar</string>
    <string name="editarPedido">Editar pedido</string>
    <string name="eliminarPedido">Eliminar pedido</string>
    <string name="cancelarPedido">Cancelar pedido</string>
    <string name="mensajeEliminarPedido">¿Está seguro de querer eliminar este pedido?</string>
    <string name="mensajeCancelarPedido">¿Está seguro de querer cancelar este pedido?</string>
    <string name="mensajeCancelarPedidoSinReembolso">¿Está seguro de querer cancelar este pedido? No se le reembolsará el anticipo</string>
    <string name="noEditarPedido">No es posible editar este pedido porque ya se encuentra en proceso de elaboración</string>
    <string name="noCancelarPedido">Los pedidos cancelados ya no se pueden modificar</string>
    <string name="eliminacionExitosa">Pedido eliminado exitosamente</string>
    <string name="cancelacionExitosa">Pedido cancelado exitosamente</string>
    <string name="eliminacionFallida">Ocurrió un error, favor de reintentar</string>
    <string name="eligePresentacion">Elige una presentación</string>
    <string name="eligeDireccion">Elige cómo quieres recibir el pedido</string>
    <string name="siguiente">Siguiente</string>
    <string name="observaciones">Observaciones</string>
    <string name="sinObservaciones">Sin observaciones</string>


    <!--Catálogo-->

    <string name="detalleProducto">Detalle del producto</string>
    <string name="tipo">Tipo de producto</string>
    <string name="presentaciones">Presentaciones disponibles</string>
    <string name="pres">Presentaciones del producto</string>
    <string name="ordenar">Ordenar</string>
    <string name="descripción">Descripción</string>
    <string name="presentacionesConPrecio">%1s : $%2s</string>
    <string name="categoria1">Pasteles/Roscas</string>
    <string name="categoria2">Panques</string>
    <string name="categoria3">Muffins/Cupcakes</string>
    <string name="categoria4">Galletas</string>
    <string name="categoria5">Otros</string>
    <string name="errorConexion">Error de conexión</string>
    <string name="usuarioBanner">Usuario</string>
    <string name="tituloCatalogo">Productos disponibles</string>
    <string name="invitado">Invitado</string>
    <!-- Admin -->
    <string name="listaPedidosAdmin">Pedidos registrados</string>
    <string name="editarPedidoAdmin">Editar pedido : Administrador  </string>
    <string name="modificarEstatus">Modificar estatus</string>
    <string name="productoTitulo">Producto : %s</string>
    <string name="guardarCambios">Guardar</string>
    <string name="observacionesPedido">Observaciones para el cliente</string>
    <string name="errorGenerico">Ocurrio un error, favor de reintentar</string>
    <string name="guardarCambiosAlerta">¿Los datos son correctos?</string>
    <string name="Volver">Volver</string>



</resources>