<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DireccionFragment">

    <TextView
        android:id="@+id/tvTitulo"
        android:text="@string/eligeDireccion"
        android:background="@color/azulFondo"
        style="@style/TitleText"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/pbLoading"
                style="?android:attr/progressBarStyle"
                android:layout_width="70dp"
                android:layout_height="72dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tvDelivery"
                app:layout_constraintTop_toBottomOf ="@id/pbLoading"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:text="@string/entrega"
                style="@style/SubTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rgDelivery"
                style="@style/NormalText"
                app:layout_constraintTop_toBottomOf="@id/tvDelivery"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rbSucursal"
                    style="@style/NormalText"
                    android:text="@string/sucursal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/rbDomicilio"
                    style="@style/NormalText"
                    android:text="@string/domicilio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

            <TextView
                android:id="@+id/tvAdress"
                android:text="@string/domicilioEntrega"
                style="@style/SubTitleText"
                app:layout_constraintTop_toBottomOf="@id/rgDelivery"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilStreet"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="30dp"
                android:hint="@string/calleNumero"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/tvAdress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStreet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSuburb"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="30dp"
                android:hint="@string/colonia"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/tilStreet"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSuburb"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPostalCode"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="30dp"
                android:hint="@string/codigoP"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/tilSuburb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPostalCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNotes"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="30dp"
                android:hint="@string/observacionesDireccion"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/tilPostalCode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNotes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btFinish"
                style="@style/ButtonStyle"
                android:text="@string/finalizar"
                app:layout_constraintTop_toBottomOf="@id/tilNotes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>