<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment">

    <TextView
        android:id="@+id/tvTitulo"
        android:text="@string/datosInicio"
        android:background="@color/morado1"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:paddingVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="Nombre"
        android:id="@+id/etName"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/tvTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="Apellido"
        android:id="@+id/etLastName"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvSex"
        app:layout_constraintTop_toBottomOf="@id/etLastName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:text="Sexo:"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/rgSex"
        app:layout_constraintTop_toBottomOf="@id/tvSex"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbMale"
            style="@style/NormalText"
            android:text="@string/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rbFemale"
            style="@style/NormalText"
            android:text="@string/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/rbOther"
            style="@style/NormalText"
            android:text="@string/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>


    <EditText
        android:hint="Correo"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/rgSex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:hint="Contraseña"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btSend"
        android:text="@string/iniciar"
        app:layout_constraintTop_toTopOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>